k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portal
spec:
  type: NodePort
  selector:
    app: portal
  ports:
  - port: 3000
    targetPort: 3000
    nodePort: 30080
